# Waycord-Bot

./: .gitignore  Dockerfile  README.md  first_deploy.sh  redeploy.sh  startup.sh
docs/: db_docs.md  server.md
src/api/: Dockerfile  app.js  package-lock.json  package.json
src/api/db/: db_setup.sql  query.js
src/api/routes/: archives.js  meta.js
src/server/: .env  .gitignore  Dockerfile  app.js  docker-compose.yml  package.json  server.js
src/server/db/: connection.js  db_config.sql  db_setup.sql  query.js
src/server/routes/: archives.js  channels.js  messages.js  servers.js  users.js
src/server_scripts/: first_deploy.sh  redeploy.sh
src/waycord_bot/: .gitignore  bot.py  bot_info.py  notes.txt  pyproject.toml
src/waycord_bot/commands/: archives.py  general.py  help.py
src/waycord_bot/tests/: test_waycord_bot.py
src/waycord_bot/waycord_api/: calls.py
src/waycord_bot/waycord_bot/: bot.py
src/waycord_bot/waycord_bot/commands/: archives.py  general.py
src/waycord_bot/waycord_bot/utils/: load_env.py
src/waycord_bot/waycord_bot/waycord_api/: calls.py
