[tool.poetry]
name = "waycord_bot"
version = "0.1.0"
description = ""
authors = ["MonEmperor <46490084+MonEmperor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.7.4.post0"
async-timeout = "3.0.1"
attrs = "22.1.0"
discord = "1.7.3"
"discord.py" = "1.7.3"
idna = "3.3"
multidict = "6.0.2"
pip = "22.1.2"
python-dotenv = "0.20.0"
requests = "2.28.1"
setuptools = "63.2.0"
typing-extensions = "4.3.00"
wheel = "0.37.1"
yarl = "1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
